[package]
name = "deno_doc"
version = "0.154.0"
edition = "2021"
description = "doc generation for deno"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_doc"

[workspace]
members = ["lib"]

[workspace.dependencies]
deno_graph = { version = "0.83.0", default-features = false, features = ["symbols"] }
deno_ast = { version = "0.42.0" }
import_map = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "deno_doc"

[[example]]
name = "ddoc"
required-features = ["html"]

[dependencies]
anyhow = "1.0.86"
cfg-if = "1.0.0"
deno_ast.workspace = true
deno_graph.workspace = true
indexmap = "2.3.0"
futures = "0.3.30"
import_map.workspace = true
lazy_static = "1.5.0"
regex = "1.10.6"
serde.workspace = true
serde_json = { version = "1.0.122", features = ["preserve_order"] }
termcolor = "1.4.1"

html-escape = { version = "0.2.13", optional = true }
comrak = { version = "0.28.0", optional = true, default-features = false }
handlebars = { version = "6.1", optional = true, features = ["string_helpers"] }
syntect = { version = "5.2.0", optional = true, default-features = false, features = [
  "parsing",
  "default-syntaxes",
  "default-themes",
  "html",
  "dump-load",
  "regex-onig",
] }
ammonia = { version = "4.0.0", optional = true }

tree-sitter-highlight = { version = "0.22.6", optional = true }
tree-sitter-javascript = { version = "0.21.4", optional = true }
tree-sitter-typescript = { version = "0.21.2", optional = true }
tree-sitter-json = { version = "0.21.0", optional = true }
tree-sitter-regex = { version = "0.21.0", optional = true }
tree-sitter-css = { version = "0.21.0", optional = true }
tree-sitter-md = { version = "0.2.3", optional = true }
tree-sitter-rust = { version = "0.21.2", optional = true }
tree-sitter-html = { version = "0.20.3", optional = true }
tree-sitter-bash = { version = "0.21.0", optional = true }
tree-sitter-xml = { version = "0.6.4", optional = true }
itoa = "1.0.11"

[dev-dependencies]
anyhow = { version = "1.0.86" }
clap = "2.34.0"
console_static_text = "0.8.2"
criterion = { version = "0.4.0", features = ["async_futures", "html_reports"] }
file_test_runner = "0.7.2"
tokio = { version = "1.39.2", features = ["full"] }
pretty_assertions = "1.4.0"
insta = { version = "1.39.0", features = ["json"] }

[features]
default = ["html", "rust", "ammonia", "tree-sitter"]
rust = []
html = ["html-escape", "comrak", "handlebars"]
tree-sitter = [
  "tree-sitter-highlight",
  "tree-sitter-javascript",
  "tree-sitter-typescript",
  "tree-sitter-json",
  "tree-sitter-regex",
  "tree-sitter-css",
  "tree-sitter-md",
  "tree-sitter-rust",
  "tree-sitter-html",
  "tree-sitter-bash",
  "tree-sitter-xml",
]

[[test]]
name = "specs"
path = "tests/specs_test.rs"
harness = false

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "s"
