[package]
name = "deno_doc"
version = "0.160.0"
edition = "2021"
description = "doc generation for deno"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_doc"

[workspace]
members = ["lib"]

[workspace.dependencies]
deno_graph = { version = "0.85.0", default-features = false, features = ["symbols"] }
deno_ast = { version = "0.43.0" }
import_map = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
name = "deno_doc"

[[example]]
name = "ddoc"
required-features = ["comrak"]

[dependencies]
anyhow = "1.0.86"
cfg-if = "1.0.0"
deno_ast.workspace = true
deno_graph.workspace = true
indexmap = "2.3.0"
futures = "0.3.30"
import_map.workspace = true
lazy_static = "1.5.0"
regex = "1.10.6"
serde.workspace = true
serde_json = { version = "1.0.122", features = ["preserve_order"] }
termcolor = "1.4.1"
itoa = "1.0.11"
deno_path_util = "0.2.1"

html-escape = { version = "0.2.13" }
handlebars = { version = "6.1", features = ["string_helpers"] }
comrak = { version = "0.29.0", optional = true, default-features = false }
ammonia = { version = "4.0.0", optional = true }

[dev-dependencies]
anyhow = { version = "1.0.86" }
clap = "2.34.0"
console_static_text = "0.8.2"
criterion = { version = "0.4.0", features = ["async_futures", "html_reports"] }
file_test_runner = "0.7.2"
tokio = { version = "1.39.2", features = ["full"] }
pretty_assertions = "1.4.0"
insta = { version = "1.39.0", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
url = "2.4.1"
percent-encoding = "2.3.1"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde-wasm-bindgen = "=0.5.0"

[features]
default = ["rust", "comrak"]
rust = []
comrak = ["dep:comrak", "ammonia"]

[[test]]
name = "specs"
path = "tests/specs_test.rs"
harness = false

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "s"
